fixed button alignment

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 /* === Header === */
 
 header {
-    padding: 15px 8%;
+    padding: 10px 5%;
     width: 100%;
     position: fixed;
     top: 0;
@@ -77,19 +77,30 @@ ul.navlist {
 }
 
 .btn {
-    background: #00abad;
     background: linear-gradient(0deg, rgba(0, 171, 173, 1) 0%, rgba(253, 187, 45, 1) 100%);
     color: #000;
-    padding: 8px 10px;
+    padding: 5px 8px;
     border-radius: 5px;
     font-weight: 500;
     transition: all .3s ease;
+    #btn-top{
+        display: inline-flex;
+        align-items: center;
+        gap: 5px;
+    }
 }
 
 .btn:hover,
 .btn-box, .d-CV:hover {
     box-shadow: rgba(0, 0, 0, 0.19)0px 10px 20px,
         rgba(0, 0, 0, 0.23)0px 6px 6px;
+}
+
+#chat-para {
+    font-weight: 200;
+    font-size: 8px;
+    display: flex;
+    justify-content: center;
 }
 
 .menu-icon {
@@ -366,6 +377,15 @@ section {
         margin-left: 20px;
         color:green;
     }
+    transition: 0.3s;
+    border-radius: 5px;
+}
+
+.bachelors:hover {
+    transform: translateY(-2px);
+}
+.masters:hover {
+    transform: translateY(-2px);
 }
 
 /* === skills === */
@@ -676,7 +696,7 @@ footer > div {
     .home {
         grid-template-columns: 1fr;
         grid-gap: 1.5em; 
-        margin-top: 70px;
+        margin-top: 50px;
     }
 
     .hero-info,
@@ -733,7 +753,7 @@ footer > div {
         grid-template-columns: 1fr; /* stack items vertically */
         text-align: center;
         grid-gap: 1.5em; /* reduce gap between items */
-        margin-top: 70px;
+        margin-top: 50px;
     }
     
     .hero-info,
